fix background visible in zen browser and mobile browser in excessive scroll

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,11 @@
 @use 'reset';
 @use 'variables' as v;
 
+html,
+body {
+  overscroll-behavior: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
